--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,20 +1,42 @@
+
 .matrix {
     height: 320px;
     width: 320px;
+    border-radius: 5px;
     border: solid black 1px;
     font-size: 0;
-    background-color: #aaa;
+    background-color: var(--primary);
     margin: auto;
     margin-top: 10px;
+    user-select: none;
 }
 
 .matrix .element {
     width: 36px;
     height:36px;
-    border: solid #fff 1px;
     display: inline-block;
-    margin: 1px;
-    cursor: pointer;
+    margin: 2px;
+}
+
+/* whoops xd */
+.matrix .element:nth-child(1) {
+    border-radius: 5px 0 0 0;
+}
+.matrix .element:nth-child(8) {
+    border-radius: 0 5px 0 0;
+}
+.matrix .element:nth-child(57) {
+    border-radius: 0 0 0 5px;
+}
+.matrix .element:nth-child(64) {
+    border-radius: 0 0 5px 0;
+}
+
+.matrix .outline {
+    width: 34px;
+    height:34px;
+    border: solid #aaa 1px;
+    margin: 2px;
 }
 
 .matrix .element-inactive {
@@ -26,10 +48,11 @@
 }
 
 .color-selector {
+    border-radius: 5px;
     border:solid black 1px;
     width:320px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .color-selector .color {
     height:61px;
@@ -40,18 +63,24 @@
     vertical-align: middle;
 }
 .color-preview {
-    height: 150px;
-    width: 45px;
+    height: 45px;
+    width: 280px;
     margin: 20px 10px 20px 20px;
     border: solid black 1px;
+    border-radius: 5px;
     display: inline-block;
 }
 .color-slider {
-    width: 90px;
+    width: 170px;
+    -webkit-appearance: none;
+}
+
+.color-slider:focus {
+    outline: none;
 }
 
 .color-slider::-webkit-slider-runnable-track {
-    height: 2px;
+    height: 4px;
 }
 
 .color-slider-red::-webkit-slider-runnable-track {
@@ -68,60 +97,70 @@
 
 .color-slider::-webkit-slider-thumb {
   position: relative;
-  bottom: 10px;
+  bottom: 13px;
   cursor: grab;
-}
-.color-values {
-    width: 240px;
-    float: right;
+  height: 30px;
+  width: 10px;
+  border: solid 1px black;
+  border-radius: 5px;
+  background-color: var(--accent);
+  -webkit-appearance: none;
+
 }
 
-.frame {
-    height: 40px;
-    width: 40px;
-    padding: 1px;
-    margin: 10px;
-    border: solid black 1px;
-    cursor: pointer;
-    vertical-align: middle;
-    display: inline-block;
-    font-size: 0;
-}
+
 
 .matrix-controls {
     height: 40px;
     padding: 1px;
+    border-radius: 5px;
+    width: 318px;
+    margin: auto;
     border: solid black 1px;
 }
 
 .frame-controls {
     height: 40px;
+    border-radius: 5px;
     padding: 1px;
-    margin: 10px;
+    margin: 5px;
     margin-top: 0px;
     border: solid black 1px;
 }
 
-.matrix-controls button {
-    float: right;
+.controls button {
     height: 38px;
-    width: 38px;
+    text-align: center;
+    min-width: 38px;
+    display: inline-block;
     margin: 1px;
     cursor: pointer;
     border: none;
-    transition: background-color 0.1s ease-in-out;
+    border: solid 1px black;
+    border-radius: 5px;
+    background-color: transparent;
+    color: var(--accent);
+    transition: all 0.1s ease-in-out;
+}
+.controls button i {
+    vertical-align: middle;
 }
 
-.matrix-controls button:hover {
-    background-color: #aaaaaa;
+.button-right {
+    float: right;
 }
 
-.matrix-controls button:focus {
+.controls button:hover {
+    background-color: var(--accent);
+    color: var(--primary);
+}
+
+.controls button:focus {
     outline: none;
 }
 
-.matrix-controls button:active {
-    background-color: #aaaaaa;
+.controls button:active {
+    background-color: #8d8d8d;
 }
 
 .content {
@@ -136,33 +175,61 @@
     padding: 20px;
     margin: 10px;
     border: solid black 1px;
+    border-radius: 5px;
+    background: var(--primary);
     flex: 1;
-    height: 620px;
 }
 
 .frames {
     padding: 20px;
     margin: 10px;
+    border-radius: 5px;
     border: solid black 1px;
     min-width: 300px;
+    background: var(--primary);
     flex-direction: row;
     flex: 4;
-    height: 620px;
     overflow: auto;
 }
 
+.frame {
+    height: 60px;
+    width: 60px;
+    padding: 1px;
+    margin: 5px;
+    border: solid var(--background) 1px;
+    border-radius: 5px;
+    cursor: pointer;
+    vertical-align: middle;
+    display: inline-block;
+    font-size: 0;
+}
 
 .frame .pixel {
-    width: 5px;
-    height:5px;
+    width:7.5px;
+    height:7.5px;
     display: inline-block;
 }
 
+
+.frame .pixel:nth-child(1) {
+    border-radius: 5px 0 0 0;
+}
+.frame .pixel:nth-child(8) {
+    border-radius: 0 5px 0 0;
+}
+.frame .pixel:nth-child(57) {
+    border-radius: 0 0 0 5px;
+}
+.frame .pixel:nth-child(64) {
+    border-radius: 0 0 5px 0;
+}
+
+
 .frame-selected {
-    border: solid black 2px;
-    height: 40px;
-    margin: 9px;
-    width: 40px;
+    border: solid var(--background) 2px;
+    border-radius: 5px;
+    margin: 4px;
 }
 
 .frame-add {
@@ -171,3 +238,40 @@
     user-select: none;
     line-height: 43px;
 }
+
+.color-palette {
+    width: 320px;
+    margin: auto;
+    margin-top: 10px;
+    border: solid black 1px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.color-palette .color {
+    width: 60px;
+    margin: 7px;
+    height: 40px;
+    display: inline-block;
+    border: solid 1px var(--background);
+}
+
+.active::before {
+    height: 10px;
+    width: 10px;
+    z-index: 10000;
+    content: "";
+    margin: auto;
+    margin-top: 15px;
+    display: block;
+    mix-blend-mode: difference;
+    background-color: #fff;
+}
+/*
+.color-palette .active {
+    width: 60px;
+    height: 40px;
+    margin: 5px;
+    border: solid 3px var(--background);
+}
+*/
