--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
+    --primary: #fff;
+    --background: #fff;
+    --light: #242b2a;
+    --lighter: #242b2a;
+    --accent: #242b2a;
+}
+
+
+
+.dark {
     --primary: #1f2833;
     --background: #0b0c10;
     --light: #c5c6c7;
     --lighter: #66fcf1;
     --accent: #45a29e;
 }
-
 
 body {
     background: var(--background);
