added multiple animation support

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,3 +1,8 @@
+<div class="heading controls">
+    <button [routerLink]="['']"><i class="material-icons">arrow_backwards</i></button>
+    <h1 *ngIf="currentAnimation">Editor: {{currentAnimation.name}}</h1>
+
+</div>
 <div class="content">
   <div class="designer" >
     <div class="controls matrix-controls">
