--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,3 +1,19 @@
+.heading {
+    height: 40px;
+    border-radius: 5px;
+    padding: 1px;
+    margin: 10px;
+    margin-top: 20px;
+    border: solid black 1px;
+}
+
+.heading h1 {
+    margin: 0 0 0 10px;
+    display: inline-block;
+    font-weight: 500;
+    vertical-align: middle;
+}
+
 
 .matrix {
     height: 320px;
@@ -108,8 +124,6 @@
 
 }
 
-
-
 .matrix-controls {
     height: 40px;
     padding: 1px;
@@ -126,41 +140,6 @@
     margin: 5px;
     margin-top: 0px;
     border: solid black 1px;
-}
-
-.controls button {
-    height: 38px;
-    text-align: center;
-    min-width: 38px;
-    display: inline-block;
-    margin: 1px;
-    cursor: pointer;
-    border: none;
-    border: solid 1px black;
-    border-radius: 5px;
-    background-color: transparent;
-    color: var(--accent);
-    transition: all 0.1s ease-in-out;
-}
-.controls button i {
-    vertical-align: middle;
-}
-
-.button-right {
-    float: right;
-}
-
-.controls button:hover {
-    background-color: var(--accent);
-    color: var(--primary);
-}
-
-.controls button:focus {
-    outline: none;
-}
-
-.controls button:active {
-    background-color: #8d8d8d;
 }
 
 .content {
