--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,13 +1,13 @@
 <div class="heading controls">
     <button [routerLink]="['']"><i class="material-icons">arrow_backwards</i></button>
     <h1 *ngIf="currentAnimation">Editor: {{currentAnimation.name}}</h1>
-
 </div>
+
 <div class="content">
   <div class="designer" >
     <div class="controls matrix-controls">
       <input type="checkbox" [(ngModel)]="brush">
-      <input min="0" step="1" id="frame-duration" type="number" *ngIf="currentFrame" [(ngModel)]="currentFrame.duration">
+      <input min="0" step="1" id="frame-duration" type="number" *ngIf="currentFrame"  [(ngModel)]="currentFrame.duration">
       <button class="button-right" (click)="clear()"><i class="material-icons">close</i></button>
     </div>
     <div class="matrix">
@@ -52,7 +52,7 @@
         <button (click)="left()" [disabled]="this.frames.indexOf(this.currentFrame) == 0"><i class="material-icons">arrow_back</i></button>
         <button (click)="deleteFrame()" [disabled]="this.frames.length == 1"><i class="material-icons">delete</i></button>
         <button (click)="right()" [disabled]="this.frames.indexOf(this.currentFrame) == this.frames.length-1"><i class="material-icons">arrow_forward</i></button>
-        <button (click)="sendRequest()"><i class="material-icons">cloud_upload</i></button>
+        <button (click)="sendRequest()" [ngClass]="{'loading': loading}" [disabled]="loading"><i class="material-icons">cloud_upload</i></button>
         <button class="button-right" (click)="addFrame()"><i class="material-icons">add</i></button>
       </div>
     <div class="frame" *ngFor="let frame of frames" (click)="loadFrame(frame)" [ngClass]="{'frame-selected': currentFrame == frame}">
