--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,6 +1,5 @@
 .controls {
     height: 40px;
-    border-radius: 5px;
     width: calc(100% - 20px);
     margin: 10px;
     border: solid black 1px;
@@ -21,19 +20,25 @@
     border: solid black 1px;
 }
 
-.new .text {
-    margin-top: 6px;
-    margin-left: 6px;
-    display: inline-block;
-    text-align: center;
-}
-
 .selected {
     background-color: var(--accent);
     color: var(--primary);
 }
-.controls .text span {
+.new .text {
+    color: #646464;
+}
+.new i {
+    color: #646464;
     vertical-align: sub;
+    font-size: 30px;
+    margin: 5px;
+}
+
+.new .text {
+    vertical-align: inherit;
+}
+.controls .text span {
+    vertical-align: middle;
     margin-left: 20px;
 }
 .controls .text:focus {
@@ -51,7 +56,6 @@
     justify-content: center;
 }
 .animations {
-    border-radius: 3px;
     width: 450px;
     height: calc(100%);
     border: solid 1px black;
@@ -66,7 +70,6 @@
 }
 .editor {
     margin: 10px;
-    border-radius: 3px;
     height: 200px;
     max-width: 600px;
     min-width: 400px;
