--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,27 +1,20 @@
 <div class="content">
   <div class="animations">
     <div class="controls" *ngFor="let animation of animations" [ngClass]="{'selected': currentAnimation == animation}">
+      <button><i class="material-icons">check</i></button>  
       <div class="text" (click)="selectAnimation(animation)">
-          <span >{{animation.name}}</span>
+        <span class="name">{{animation.name}}</span>
       </div>
     </div>
-    <div class="controls new" [ngClass]="{'selected': currentAnimation == undefined}">
-        <div class="text" (click)="new()">
-            <i class="material-icons">add</i>
-        </div>
+    <div class="controls new">
+      <i class="material-icons">add</i>
+      <div class="text" (click)="selectAnimation(animation)">
+        <span class="name">Neue Animation</span>
       </div>
+    </div>
   </div>
 
   <div class="editor controls">
-    <ng-container *ngIf="currentAnimation">
-        <input type="text" [(ngModel)]="currentAnimation.name">  
-        <button class="button-right" [routerLink]="['animation', currentAnimation.animationId, 'editor']"><i class="material-icons">brush</i></button>
-        <button class="button-right"><i class="material-icons">delete</i></button>    
-        <button class="button-right"><i class="material-icons">save</i></button>    
-    </ng-container>
-    <ng-container *ngIf="!currentAnimation">
-        <input type="text" [(ngModel)]="animationName" placeholder="Name..">  
-        <button class="button-right" (click)="createAnimation()"><i class="material-icons">add</i></button>
-    </ng-container>
+    
   </div>
 </div>
