--- a/src/app/test/test.component.css
+++ b/src/app/test/test.component.css
@@ -1,10 +1,10 @@
 .heading {
     height: 40px;
-    border-radius: 5px;
+    
     padding: 1px;
-    margin: 10px;
+    margin: 8px;
     margin-top: 20px;
-    border: solid black 1px;
+    
 }
 
 .heading h1 {
@@ -18,7 +18,7 @@
 .matrix {
     height: 320px;
     width: 320px;
-    border-radius: 5px;
+    
     border: solid black 1px;
     font-size: 0;
     background-color: var(--primary);
@@ -34,7 +34,7 @@
     margin: 2px;
 }
 
-/* whoops xd */
+/*
 .matrix .element:nth-child(1) {
     border-radius: 5px 0 0 0;
 }
@@ -46,7 +46,7 @@
 }
 .matrix .element:nth-child(64) {
     border-radius: 0 0 5px 0;
-}
+}*/
 
 .matrix .outline {
     width: 34px;
@@ -64,7 +64,6 @@
 }
 
 .color-selector {
-    border-radius: 5px;
     border:solid black 1px;
     width:320px;
     margin: auto;
@@ -78,12 +77,53 @@
     margin: 20px;
     vertical-align: middle;
 }
+.color-selector input[type=number] {
+    width: 80px;
+    margin-left: 5px;    
+    padding-left: 3px;
+}
+.color-input {
+    margin: auto;
+    font-size: 30px;
+    color: black;
+    width: 140px;
+    font-family: monospace;
+    color: black;
+
+}
+
+.color-input input {
+    outline: none;
+    padding: 0px;
+    width: 120px;
+    text-transform: uppercase;
+    margin: auto;
+    background: transparent;
+    border: none;
+
+    font-family: monospace;
+    font-size: 30px;
+}
+
+.white input {
+    color: white;
+}
+.white span {
+    color: white;
+}
+
+.color-input span {
+    font-size: 30px;
+    vertical-align: bottom;
+    margin: -1px;
+}
+
 .color-preview {
     height: 45px;
     width: 280px;
     margin: 20px 10px 20px 20px;
     border: solid black 1px;
-    border-radius: 5px;
+    
     display: inline-block;
 }
 .color-slider {
@@ -118,7 +158,7 @@
   height: 30px;
   width: 10px;
   border: solid 1px black;
-  border-radius: 5px;
+  
   background-color: var(--accent);
   -webkit-appearance: none;
 
@@ -126,20 +166,19 @@
 
 .matrix-controls {
     height: 40px;
-    padding: 1px;
-    border-radius: 5px;
+    transform: translateX(3px);
     width: 318px;
     margin: auto;
-    border: solid black 1px;
 }
 
 .frame-controls {
     height: 40px;
-    border-radius: 5px;
-    padding: 1px;
-    margin: 5px;
+    margin: 4px;
     margin-top: 0px;
-    border: solid black 1px;
+}
+
+.frame-controls input {
+    width: 82px;
 }
 
 .content {
@@ -154,7 +193,7 @@
     padding: 20px;
     margin: 10px;
     border: solid black 1px;
-    border-radius: 5px;
+    
     background: var(--primary);
     flex: 1;
 }
@@ -162,7 +201,7 @@
 .frames {
     padding: 20px;
     margin: 10px;
-    border-radius: 5px;
+    
     border: solid black 1px;
     min-width: 300px;
     background: var(--primary);
@@ -177,7 +216,7 @@
     padding: 1px;
     margin: 5px;
     border: solid black 1px;
-    border-radius: 5px;
+    
     cursor: pointer;
     vertical-align: middle;
     display: inline-block;
@@ -190,7 +229,11 @@
     display: inline-block;
 }
 
+.color-values {
+    margin-bottom: 10px;
+}
 
+/*
 .frame .pixel:nth-child(1) {
     border-radius: 5px 0 0 0;
 }
@@ -202,12 +245,12 @@
 }
 .frame .pixel:nth-child(64) {
     border-radius: 0 0 5px 0;
-}
+}*/
 
 
 .frame-selected {
     border: solid black 2px;
-    border-radius: 5px;
+    
     margin: 4px;
 }
 
@@ -215,7 +258,13 @@
     font-size: 50px;
     text-align: center;
     user-select: none;
-    line-height: 43px;
+    line-height: 67px;
+}
+
+.frame-add i {
+    font-size: 29px;
+    display: block;
+    margin: 16px;
 }
 
 .color-palette {
@@ -223,29 +272,32 @@
     margin: auto;
     margin-top: 10px;
     border: solid black 1px;
-    border-radius: 5px;
+    
     text-align: center;
 }
 
 .color-palette .color {
-    width: 60px;
-    margin: 7px;
-    height: 40px;
     display: inline-block;
-    border: solid 1px var(--background);
+    margin: 7px;
+    border: solid 1px black;
+    height: 40px;
+    
+    width: 60px;
 }
 
-.active::before {
-    height: 10px;
-    width: 10px;
-    z-index: 10000;
-    content: "";
-    margin: auto;
-    margin-top: 15px;
-    display: block;
-    mix-blend-mode: difference;
-    background-color: #fff;
+.color-palette .active {
+    border: solid 2px black;
+    margin: 6px;
 }
+
+.color-palette .color-element {
+    width: 58px;
+    margin: 1px;
+    height: 38px;
+    
+    display: inline-block;
+}
+
 /*
 .color-palette .active {
     width: 60px;
